Migrate demoted system apps
Create a self-disabling boot receiver that installs demoted system apps

Change-Id: I9943088db95d4f4d5ae67a82712e8627b5e855bb

--- a/packages/LineageSettingsProvider/AndroidManifest.xml
+++ b/packages/LineageSettingsProvider/AndroidManifest.xml
@@ -50,5 +50,12 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name="BootReceiver" android:enabled="true" android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="org.lineageos.setupwizard.LINEAGE_APPS_INSTALLED"/>
+            </intent-filter>
+        </receiver>
+
     </application>
 </manifest>
