--- a/packages/LineageSettingsProvider/AndroidManifest.xml
+++ b/packages/LineageSettingsProvider/AndroidManifest.xml
@@ -25,7 +25,7 @@
     <uses-permission android:name="android.permission.MANAGE_USERS" />
 
     <application android:icon="@mipmap/ic_launcher"
-                 android:label="@string/app_name"
+                 android:label="@string/calyx_app_name"
                  android:process="system"
                  android:killAfterRestore="false"
                  android:allowClearUserData="false"
